# portfolio-var-notebook

./: .gitignore  README.md  main.py  portfolio_var.ipynb  pyproject.toml
.ipynb_checkpoints/: portfolio_var-checkpoint.ipynb
src/: __init__.py  data.py  plotting.py  portfolio.py  returns.py  var.py
