[project]
name = "portfolio-var-notebook"
version = "0.1.0"
description = "Interactive Jupyter Notebook app to compute portfolio Value at Risk (VaR) with yfinance data"
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
	"pandas>=2.0",
	"numpy>=1.24",
	"matplotlib>=3.7",
	"yfinance>=0.2.30",
	"scipy>=1.10",
	"notebook>=7.0",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
index-url = "https://pypi.org/simple"
